--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ catkin_package(
   CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
+add_definitions(-DEIGEN2_SUPPORT -DDEBUG -std=c++11 -Wall -g -ggdb -O0 -fopenmp -fPIC)
 
 ###########
 ## Build ##
@@ -106,7 +107,7 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-add_executable(simple_hexapod_controller_node src/main.cpp src/model.cpp src/tripodWalk.cpp)#${simple_hexapod_controller_sources})
+add_executable(simple_hexapod_controller_node src/main.cpp src/model.cpp src/tripodWalk.cpp src/debugOutput.cpp)#${simple_hexapod_controller_sources})
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
